deploy/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexusnote-route
  namespace: nexusnote
spec:
  parentRefs:
    - name: nexusnote-gateway
      sectionName: https
  hostnames:
    - "juanie.art"
    - "www.juanie.art"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /collab
      backendRefs:
        - name: nexusnote-service
          port: 1234
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nexusnote-service
          port: 80
